--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <div class="contact-content">
           <div class="contact-form">
             <h3>Envoyez-moi un message</h3>
-            <form action="https://formspree.io/f/mldnqpra" method="POST">
+            <form action="https://formspree.io/f/xldnqajk" method="POST">
               <div class="form-group">
                 <label for="name">Nom</label>
                 <input type="text" id="name" name="name" required />
