--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <header>
       <nav class="container">
         <div class="logo">Noé Damas</div>
+
+        <button class="burger" aria-label="Ouvrir le menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
         <ul class="nav-links">
           <li><a href="#home">Accueil</a></li>
           <li><a href="#about">À propos</a></li>
@@ -341,7 +348,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2024 Noé Damas. Tous droits réservés.</p>
+        <p>&copy; 2025 Noé Damas. Tous droits réservés.</p>
         <div class="social-links">
           <a href="mailto:noe3.damas@gmail.com">📧</a>
           <a href="tel:+33783407727">📱</a>
