--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
               <div class="skill-progress-bar" style="width: 80%"></div>
             </div>
           </div>
+
+          <div class="skill-card">
+            <div class="skill-icon">🤖</div>
+            <h3>Automatisme</h3>
+            <p>
+              Control expert (Unity pro), TIA Portal, programmation d'automates
+            </p>
+            <div class="skill-progress">
+              <div class="skill-progress-bar" style="width: 80%"></div>
+            </div>
+          </div>
+
           <div class="skill-card">
             <div class="skill-icon">📊</div>
             <h3>Suite Office</h3>
